--- a/3-visualization-slider.html
+++ b/3-visualization-slider.html
@@ -79,6 +79,6 @@ responsive: true
 	{% endfor %}
 	]
 
-    getGraphData($, "{{ site.contracts_url | prepend: site.baseurl }}");
+    getGraphData($, "{{ site.contracts_url }}");
 
 </script>
