--- a/iframe-visualization.html
+++ b/iframe-visualization.html
@@ -78,6 +78,6 @@ permalink: /iframe-visualization/
 		{% endfor %}
 		]
 	
-		getGraphData($, "{{ site.contracts_url | prepend: site.baseurl }}");
+		getGraphData($, "{{ site.contracts_url }}");
 	
 	</script>
