--- a/4-contracts.html
+++ b/4-contracts.html
@@ -72,7 +72,7 @@ permalink: /contracts/
 <script src="{{ site.baseurl }}/assets/javascript/towersearch.js"></script>
 
 <script type="text/javascript">
-    getSearchData($, "{{ site.contracts_url | prepend: site.baseurl }}");
+    getSearchData($, "{{ site.contracts_url }}");
 
     $('#search-dateFrom').datepicker({ format: 'yyyy-mm-dd', showRightIcon: false, uiLibrary: 'bootstrap4', iconsLibrary: 'fontawesome' });
     $('#search-dateTo').datepicker({ format: 'yyyy-mm-dd', showRightIcon: false, uiLibrary: 'bootstrap4', iconsLibrary: 'fontawesome' });
