--- a/4-testimonios.html
+++ b/4-testimonios.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Slider
-permalink: /slider/
+title: Testimonios
+permalink: /testimonios/
 ---
 <div id="page-loader"><span class="preloader-interior"></span></div>
 <div id="fullpage-slider">
@@ -10,12 +10,15 @@ permalink: /slider/
 		<div class="section">
 			<div class="container">
 				<div class="row align-items-center">
-					{%- if first-slide.image -%}
-					<div class="col-lg-5 col-md-5 col-sm-12">
+					{%- if first-slide.audio -%}
+					<div class="col-lg-12 col-md-12 col-sm-12">
 						{{ first-slide.content }}
 					</div>
-					<div class="col-lg-7 col-md-7 col-sm-12 text-center">
-						<img data-src="{{ site.baseurl }}/assets/img/{{first-slide.image}}" class="img-fluid">
+					<div class="col-lg-12 col-md-12 col-sm-12 text-center">
+						<audio controls>
+							<source src="{{ site.baseurl }}/assets/audios/{{first-slide.audio}}" type="audio/mp3">
+							Tu navegador no soporta HTML5 audio.
+						</audio>
 					</div>
               		{%- else -%}
 					<div class="col-lg-12 col-md-12 col-sm-12 text-center">
