--- a/5-contracts.html
+++ b/5-contracts.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Contracts
-permalink: /contracts/
+title: Buscador
+permalink: /buscador/
 ---
 
 <section id="contracts_page">
@@ -56,7 +56,7 @@ permalink: /contracts/
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-12 mb-5">
                 <table id="contracts_search" width="100%"></table>
             </div>
         </div>
