--- a/4-testimonios.html
+++ b/4-testimonios.html
@@ -15,13 +15,19 @@ permalink: /testimonios/
 						{{ first-slide.content }}
 					</div>
 					<div class="col-lg-12 col-md-12 col-sm-12 text-center">
-						<audio controls>
+						<audio controls class="mr-3">
 							<source src="{{ site.baseurl }}/assets/audios/{{first-slide.audio}}" type="audio/mp3">
 							Tu navegador no soporta HTML5 audio.
 						</audio>
+						{%- if first-slide.audio2 -%}
+						<audio controls>
+							<source src="{{ site.baseurl }}/assets/audios/{{first-slide.audio2}}" type="audio/mp3">
+							Tu navegador no soporta HTML5 audio.
+						</audio>
+						{%- endif -%}
 					</div>
               		{%- else -%}
-					<div class="col-lg-12 col-md-12 col-sm-12 text-center">
+					<div class="col-lg-12 col-md-12 col-sm-12">
 						{{ first-slide.content }}
 					</div>
 					{%- endif -%}
